Made workshop3 simplier.
Tryed to split things up more and put a longer explaination in.

--- a/workshop_3/workshop3.ipynb
+++ b/workshop_3/workshop3.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": ""
+  "name": "workshop3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -92,17 +92,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 28,
-       "text": [
-        "'brow'"
-       ]
-      }
-     ],
-     "prompt_number": 28
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -114,34 +104,10 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "#get the raw file data\n",
-      "f = open('test.out' ,'r')\n",
-      "file_contents = f.read()\n",
-      "lines = file_contents.splitlines()\n",
-      "f.close()\n",
-      "\n",
-      "leaf_colour = ''\n",
-      "for line in lines:\n",
-      "    if 'sky' in line:\n",
-      "       leaf_colour = line.split()[4]\n",
-      "        \n",
-      "#let's get rid of the comma at the end of the line\n",
-      "leaf_colour = leaf_colour[:-1]\n",
-      "print(leaf_colour)"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "grey\n"
-       ]
-      }
-     ],
-     "prompt_number": 32
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -176,7 +142,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now we have extracted the energy as a string modify it to generate a new variable named 'energy' which contains the energy as a floating point number."
+      "Now we have extracted the energy as a string modify it to generate a new variable named 'ne_energy' which contains the energy as a floating point number."
      ]
     },
     {
@@ -195,10 +161,35 @@
      "outputs": []
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      "The file Ne2.out contains energies for many different geometries of a Ne Dimer. We are going to extract these energies and geometries and plot the dissociation curve. "
+      "The file Ne2.out contains energies for many different geometries of a Ne Dimer. We are going to extract these energies and geometries and plot the dissociation curve. \n",
+      "\n",
+      "The file has the following format:\n",
+      ".\n",
+      ".\n",
+      ".       Some irrelavent stuff\n",
+      ".\n",
+      ".\n",
+      "\n",
+      "   Center              X                  Y                   Z\n",
+      "------------   -----------------  -----------------  -----------------\n",
+      "      NE          0.000000000000     0.000000000000    -0.250000000000\n",
+      "      NE          0.000000000000     0.000000000000     0.250000000000\n",
+      "\n",
+      ".\n",
+      ".\n",
+      ".       Some irrelavent stuff\n",
+      ".\n",
+      ".\n",
+      "      * CCSD(T) total energy          = -128.680692864592714\n",
+      ".\n",
+      ".\n",
+      ".       Some irrelavent stuff\n",
+      ".\n",
+      ".\n",
+      "This format is then repeated for each diffrent geometry (if this is confussing take a look in the file Ne2.out). Your task is to extract this information. As this is complex task we have broken down this task into a number of simpler steps. Throughout this mini-project there are points to check that you have obtained the correct solution.\n"
      ]
     },
     {
@@ -342,18 +333,18 @@
       "    distance = sqrt( (x1-x2)**2 + (y1-y2)**2 + (z1-z2)**2 )\n",
       "    return(distance)\n",
       "\n",
-      "dist = []"
+      "dist = np.array([])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 78
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Copy and paste your solution to the cell above into the cell below. Modify it so that to call the vect_dist function every time have_ne_2 is true to calculate the displacement between the two Ne atoms on every itteration. Append this to the list disp for every point."
+      "Copy and paste your solution to the cell two above into the cell below. Modify it so that to call the vect_dist function every time have_ne_2 is true to calculate the displacement between the two Ne atoms on every other itteration. Append this to the list dist for every point."
      ]
     },
     {
@@ -369,18 +360,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Here is a good point to check you answer run the cell bellow and check the output is the same:\n",
-      "\n",
-      "print(dist)\n",
-      "\n",
-      "[0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0]"
+      "Here is a good point to check you answer run the cell bellow and check the output is the same:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(dist)"
+      "if(dist == [0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0]):\n",
+      "    print('Sucess')\n",
+      "else:\n",
+      "    print(\"The lists don't match, check your above solutions.\")"
      ],
      "language": "python",
      "metadata": {},
@@ -403,7 +393,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Copy and paste your solution which extracts dist the dist list above to extract the ccsd(t) correlation energy for every dist."
+      "Copy and paste your solution which extracts the dist list above to extract the ccsd(t) correlation energy for every dist (you should be able to use your ealier solution to extract the energy from the file of the Ne atom)."
      ]
     },
     {
@@ -419,33 +409,21 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Again here is a good point to check you answer run the cell bellow and check the output is the same:\n",
-      "\n",
-      "   print(energies)\n",
-      "\n",
-      "should return:\n",
-      "\n",
-      "[-245.58518988116134, -253.1512734244356, -255.89966209055012, -256.9001008978585, -257.2186386081276, -257.3185434513236, -257.34942541485213, -257.35879880189407, -257.36121774835453, -257.3615478902172, -257.36147640080674, -257.36141825755266, -257.3613980202109, -257.3613919836808, -257.361389658561, -257.36138839861366, -257.36138760124186, -257.3613870702768, -257.36138670742133]"
+      "Again here is a good point to check you answer run the cell bellow and check the output is the same:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(energies)"
+      "if(energies == [-245.58518988116134, -253.1512734244356, -255.89966209055012, -256.9001008978585, -257.2186386081276, -257.3185434513236, -257.34942541485213, -257.35879880189407, -257.36121774835453, -257.3615478902172, -257.36147640080674, -257.36141825755266, -257.3613980202109, -257.3613919836808, -257.361389658561, -257.36138839861366, -257.36138760124186, -257.3613870702768, -257.36138670742133]):\n",
+      "    print('Sucess')\n",
+      "else:\n",
+      "    print(\"The lists don't match, check your above solutions.\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[-245.58518988116134, -253.1512734244356, -255.89966209055012, -256.9001008978585, -257.2186386081276, -257.3185434513236, -257.34942541485213, -257.35879880189407, -257.36121774835453, -257.3615478902172, -257.36147640080674, -257.36141825755266, -257.3613980202109, -257.3613919836808, -257.361389658561, -257.36138839861366, -257.36138760124186, -257.3613870702768, -257.36138670742133]\n"
-       ]
-      }
-     ],
-     "prompt_number": 74
+     "outputs": []
     },
     {
      "cell_type": "markdown",
