Added some comments and moved one comment to a markdown cell

--- a/workshop_3/advanced_python.ipynb
+++ b/workshop_3/advanced_python.ipynb
@@ -471,6 +471,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#modify this cell\n",
       "f = open('Ne.out', 'r')\n",
       "file_contents = f.read()\n",
       "lines = file_contents.splitlines()\n",
@@ -495,6 +496,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#modify this cell\n",
       "f = open('Ne.out', 'r')\n",
       "lines = f.readlines()\n",
       "f.close()\n",
@@ -598,6 +600,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#modify this cell\n",
       "f = open('Ne2.out', 'r')\n",
       "lines = f.readlines()\n",
       "f.close()\n",
@@ -996,10 +999,16 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "and plot the Harmonic potential:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Plot the Harmonic potential\n",
       "plot(x,V,color='k')\n",
       "\n",
       "for i in range(4):\n",
