--- a/workshop_1/intro_to_python.ipynb
+++ b/workshop_1/intro_to_python.ipynb
@@ -34,7 +34,7 @@
       "\n",
       "No copying and pasting! You'll learn the concepts better if you type them out yourself.\n",
       "\n",
-      "Warning please periodically save your work.\n"
+      "Warning please periodically save your work."
      ]
     },
     {
