--- a/workshop_3/advanced_python.ipynb
+++ b/workshop_3/advanced_python.ipynb
@@ -50,7 +50,7 @@
       "## Example: Finite Differences\n",
       "Now that we have these tools in our toolbox, we can start to do some cool stuff with it. Many of the equations we want to solve in physics and chemistry involve differential equations. We want to be able to compute the derivative of functions:\n",
       "\n",
-      "$$ y' = \\frac{y(x+h)-y(x)}{h} $$\n",
+      "$$ y' = \\lim_{h \\to 0} \\frac{y(x+h)-y(x)}{h}$$\n",
       "\n",
       "by *discretizing* the function $y(x)$ on an evenly spaced set of points $x_0, x_1, \\dots, x_n$, yielding $y_0, y_1, \\dots, y_n$. Using the discretization, we can approximate the derivative by\n",
       "\n",
@@ -852,7 +852,7 @@
       "V(r) = d ((1 - e^{-a(r - r_e)})^2 - 1)\n",
       "\\end{equation}\n",
       "\n",
-      "Write a function to compute the Morse potential with r, r_e, d and a as arguments to the function. Making sure the arguments are in the order r, r_e, d and call the function Morse."
+      "Write a function to compute the Morse potential with r, r_e, d and a as arguments to the function. Making sure the arguments are in the order r, r_e, d and call the function morse."
      ]
     },
     {
@@ -887,7 +887,7 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "The Morse Potential Looks like:"
+      "The Morse potential looks like:"
      ]
     },
     {
