--- a/workshop_1/intro_to_python_exercises.ipynb
+++ b/workshop_1/intro_to_python_exercises.ipynb
@@ -120,18 +120,27 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "*Remember: if you want to create another code cell to try out some code you can always press one of the create new cell buttons: <img src=files/notebook_create_code_cell.jpg></img>*"
+     ]
+    },
+    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {},
      "source": [
-      "Part 1 exercises"
+      "Exercise 1"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "hello(name)\n",
+      "\n",
+      "\n",
+      "1.1: hello(name)\n",
       "----------------\n",
       "\n",
       "Given a string *name*, return a string of the form \"Hello &lt;name>! How are you?\".\n",
@@ -166,7 +175,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "cube(i)\n",
+      "1.2: cube(i)\n",
       "-------\n",
       "\n",
       "given a number, return the cube of that number. \n",
@@ -197,10 +206,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "too_long_for_twitter(my_string)\n",
+      "1.3: too_long_for_twitter(my_string)\n",
       "---------------------------\n",
       "\n",
-      "Twitter messages can't be more than 140 characters! Given a string my_string, return True if the string is longer that 140 characters, and return False if the string is less than or equal to 140 characters. \n",
+      "Twitter messages can't be more than 140 characters. Given a string my_string, return True if the string is longer that 140 characters, and return False if the string is less than or equal to 140 characters. \n",
       "\n",
       "<span style=\"text-decoration:underline\" title=\"- Check your notes on the len() function\n",
       "- Check your notes on <, >, <=, >=\">Hints</span>"
@@ -230,7 +239,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "multiply_string(my_string, num_repetitions))\n",
+      "1.4: multiply_string(my_string, num_repetitions))\n",
       "-----------------------------------------\n",
       "\n",
       "Given a string my_string and a number num_repetitions, return my_string multiplied num_repetitions times. \n",
@@ -262,17 +271,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Extra exercises!\n",
-      "==============================\n",
-      "\n",
-      "Try these if you have time!"
+      "Exercise 2\n",
+      "=============================="
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "greatest(x, y, z)\n",
+      "2.1: greatest(x, y, z)\n",
       "-----------------\n",
       "\n",
       "Given numbers x, y, and z, return the greatest of these three numbers. \n",
@@ -303,7 +310,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "calculate(num)\n",
+      "2.2: calculate(num)\n",
       "--------------\n",
       "\n",
       "Given a number *num*, return a number equal to:\n",
@@ -337,7 +344,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "menu_specials(vegetable, entree)\n",
+      "2.3: menu_specials(vegetable, entree)\n",
       "-------------------------------\n",
       "\n",
       "Given a string vegetable and a string entree, return the string \"Today our specials are: &lt;vegetable&gt; and &lt;entree&gt;\". \n",
@@ -369,7 +376,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "make_HTML(tag, word)\n",
+      "2.4: make_HTML(tag, word)\n",
       "-------------------\n",
       "\n",
       "Web pages use \"HTML markup\" to style their text. For example, \"&lt;i&gt;Test&lt;/i&gt;\" causes the string \"Test\" to be displayed in italics. In this example, the \"i\" tag surrounds the string \"Test\" starting with &lt;i&gt; and ending with &lt;/i&gt;. Given a string tag and a string word, return the word with HTML tags around it, for example \"&lt;i&gt;Test&lt;/i&gt;\". \n",
@@ -397,18 +404,18 @@
      "outputs": []
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
      "source": [
-      "Part 2 exercises\n",
-      "============================ "
+      "Exercise 3"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "return_first_item(my_list)\n",
+      "3.1: return_first_item(my_list)\n",
       "-----------------------\n",
       "\n",
       "Given a list, my_list, return the very first (what programmers might call \"zero-th\"), item in that list \n",
@@ -439,7 +446,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "add_exclamation(my_list)\n",
+      "3.2: add_exclamation(my_list)\n",
       "----------------------\n",
       "\n",
       "Given a list my_list, add a string \"!\" to the end of the list and return the list \n",
@@ -469,12 +476,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "find_student(name, studentList)\n",
+      "3.3: find_student(name, studentList)\n",
       "------------------------------\n",
       "\n",
       "Given a student's name, name, and a list of student names, studentList, return the boolean True if the student name is in the list, and False otherwise.\n",
       "\n",
-      "<span style=\"text-decoration:underline\" title=\"- You don't need a 'for' loop.  Check the data types handout: how can you check if something is in a list?\n",
+      "<span style=\"text-decoration:underline\" title=\"- You don't need a 'for' loop. How can you check if something is in a list?\n",
       "- Think about the 'in' keyword.\">Hints</span>"
      ]
     },
@@ -500,13 +507,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "hello_many(list_names)\n",
+      "3.4: hello_many(list_names)\n",
       "----------------\n",
       "\n",
       "Given a list of strings *list_names*, return a string of the form \"Hello name1 and name2 and name3 and... nameN! How are you?\".\n",
       "\n",
       "<span style=\"text-decoration:underline\" title=\"\n",
-      "- How can we loop over a series of elements?\n",
+      "- The returned string has three parts an initial 'Hello' with the first name, a middle part build out of 'and' and the names, and a final '!, How are you?'. \n",
+      "- You will need to build up the middle part with a loop and then add it together with the initial and final part.\n",
       "\">Hints</span>"
      ]
     },
@@ -533,17 +541,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Extra exercises!\n",
-      "================\n",
-      "\n",
-      "Try these if you have time!"
+      "Exercise 4\n",
+      "============================ "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "count_fs(phrase)\n",
+      "4.1: count_fs(phrase)\n",
       "---------------\n",
       "\n",
       "Given a string phrase, return the total number of \"f\"s and \"F\"s in the phrase.\n",
@@ -575,7 +581,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "starts_or_ends_with_z(my_string)\n",
+      "4.2: starts_or_ends_with_z(my_string)\n",
       "---------------------------\n",
       "\n",
       "Given a string my_string, return the boolean True if my_string starts or ends with 'z' or 'Z', and False if it doesn't.\n",
@@ -607,7 +613,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "sum_of_all_strings(string_list)\n",
+      "4.3: sum_of_all_strings(string_list)\n",
       "---------------------------\n",
       "\n",
       "Given a list string_list that contains several strings, return the total of the lengths of all of the strings.\n",
@@ -638,7 +644,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "stretch_string(my_string, stretch_number)\n",
+      "4.4: stretch_string(my_string, stretch_number)\n",
       "---------------------------------------\n",
       "\n",
       "Given a string my_string and an integer stretch_number, return a string in which each character of the original string is repeated stretch_number times.\n",
@@ -670,7 +676,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "squares_list(number_list)\n",
+      "Exercise 5\n",
+      "================"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "5.1: squares_list(number_list)\n",
       "-----------------------\n",
       "\n",
       "Given a list of numbers number_list, return a list containing the squares of each of the numbers in number_list in the order in which they appeared in number_list.\n",
@@ -700,7 +714,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "remove_vowels(my_string)\n",
+      "5.2: remove_vowels(my_string)\n",
       "----------------------\n",
       "\n",
       "Given a lower-case string my_string, return that string with all of the vowels removed.\n",
@@ -732,7 +746,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "remove__words_with_vowels(string_list)\n",
+      "5.3: remove__words_with_vowels(string_list)\n",
       "---------------------------------\n",
       "\n",
       "Given a list of lower-case strings wordList, return that list with all the words that contain vowels removed.\n",
@@ -767,7 +781,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "spelling_bee(correct, guess)\n",
+      "5.4: spelling_bee(correct, guess)\n",
       "---------------------------\n",
       "\n",
       "Given the correct spelling of a word, correct, and the contestant's guessed spelling, guess, return the string \"correct\" if the guess is spelled exactly correctly, \"almost\" if there are at most two mistakes in the spelling, and \"wrong\" if three or more letters are different. You can assume that all guesses are the correct length.\n",
