added note to figure out what the icons do

--- a/workshop_1/intro_to_python.ipynb
+++ b/workshop_1/intro_to_python.ipynb
@@ -23,7 +23,7 @@
      "metadata": {},
      "source": [
       "\n",
-      "During this workshop we will cover several core programming concepts, there are exercises at the middle and end to help review the material.\n",
+      "During this workshop we will cover several core programming concepts, there are exercises in 'intro_to_pyton_exercises' notebook to help reinforce the material.\n",
       "\n",
       "This is an interactive tutorial! As you go through it any time you see something that looks like this:\n",
       "\n",
@@ -34,7 +34,7 @@
       "\n",
       "No copying and pasting! You'll learn the concepts better if you type them out yourself.\n",
       "\n",
-      "Warning please periodically save your work."
+      "Warning periodically save your work by pressing the save icon above (If you want to know what the other icons do hover your cursor over them)"
      ]
     },
     {
