More slides on excution order and buttons at top.

--- a/talk/present.tex
+++ b/talk/present.tex
@@ -227,8 +227,28 @@
 \begin{itemize}
 \item Can be used to make a Lab Notebook to analyse data.
 \item Graphs generated from the code can be directly placed into the notebook.
+\begin{exampleblock}{}
+\includegraphics[width=1\textwidth]{dash.pdf}
+\end{exampleblock}
+
 \end{itemize}
 }
+
+\frame{
+	\frametitle{Using the IPython Interactive Notebook}
+
+\begin{itemize}
+\item The order you run the cells in does matter.
+\item If in doubt restart the notebook and run again from top to bottom (quickly fix non-obvious problems). 
+\end{itemize}
+\begin{exampleblock}{}
+\includegraphics[width=1\textwidth]{order-1.pdf}
+\\
+\includegraphics[width=1\textwidth]{order-2.pdf}
+\end{exampleblock}
+
+}
+
 \frame{
 	\frametitle{Other Resources}
 
