Cut back workshop 2, added references to workshop 1

--- a/workshop_1/intro_to_python.ipynb
+++ b/workshop_1/intro_to_python.ipynb
@@ -2793,6 +2793,59 @@
       "\n",
       "Next time we'll be looking at using the commands we've learned to model processes, analyse and plot data and construct time saving scripts."
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#References\n",
+      "\n",
+      "## Learning Resources\n",
+      "* [Official Python Documentation](http://docs.python.org/2.7), including\n",
+      "    - [Python Tutorial](http://docs.python.org/2.7/tutorial)\n",
+      "    - [Python Language Reference](http://docs.python.org/2.7/reference)\n",
+      "* If you're interested in Python 3, the [Official Python 3 Docs are here](http://docs.python.org/3/).\n",
+      "* [IPython tutorial](http://ipython.org/ipython-doc/dev/interactive/tutorial.html).\n",
+      "* [Learn Python The Hard Way](http://learnpythonthehardway.org/book/)\n",
+      "* [Dive Into Python](http://www.diveintopython.net/), in particular if you're interested in Python 3.\n",
+      "* [Python Functional Programming HOWTO](http://docs.python.org/2/howto/functional.html)\n",
+      "* [The Structure and Interpretation of Computer Programs](http://mitpress.mit.edu/sicp/full-text/book/book.html), written in Scheme, a Lisp dialect, but one of the best books on computer programming ever written.\n",
+      "* [Generator Tricks for Systems Programmers](http://www.dabeaz.com/generators/) Beazley's slides on just what generators can do for you.\n",
+      "* [Python Module of the Week](http://pymotw.com/2/contents.html) is a series going through in-depth analysis of the Python standard library in a very easy to understand way.\n",
+      "\n",
+      "## Cool IPython Notebooks\n",
+      "* Rob Johansson's [excellent notebooks](http://jrjohansson.github.io/), including [Scientific Computing with Python](https://github.com/jrjohansson/scientific-python-lectures) and [Computational Quantum Physics with QuTiP](https://github.com/jrjohansson/qutip-lectures) lectures;\n",
+      "* [XKCD style graphs in matplotlib](http://nbviewer.ipython.org/url/jakevdp.github.com/downloads/notebooks/XKCD_plots.ipynb);\n",
+      "* [A collection of Notebooks for using IPython effectively](https://github.com/ipython/ipython/tree/master/examples/notebooks#a-collection-of-notebooks-for-using-ipython-effectively)\n",
+      "* [A gallery of interesting IPython Notebooks](https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks)\n",
+      "* [Cross-disciplinary computational analysis IPython Notebooks From Hadoop World 2012](https://github.com/invisibleroads/crosscompute-tutorials)\n",
+      "* [Quantites](http://nbviewer.ipython.org/urls/raw.github.com/tbekolay/pyconca2012/master/QuantitiesTutorial.ipynb) Units in Python.\n",
+      "    - [Another units module is here](http://www.southampton.ac.uk/~fangohr/blog/)\n",
+      "\n",
+      "## Packages for Scientists\n",
+      "Important libraries\n",
+      "\n",
+      "* [Python](http://www.python.org) version 3.2;\n",
+      "* [Numpy](http://www.numpy.org), the core numerical extensions for linear algebra and multidimensional np.arrays;\n",
+      "* [Scipy](http://www.scipy.org), additional libraries for scientific programming;\n",
+      "* [Matplotlib](http://matplotlib.sf.net), excellent plotting and graphing libraries;\n",
+      "* [IPython](http://ipython.org), with the additional libraries required for the notebook interface.\n",
+      "* [Sympy](http://sympy.org), symbolic math in Python\n",
+      "* [Pandas](http://pandas.pydata.org/) library for big data in Python\n",
+      "\n",
+      "Other packages of interest\n",
+      "\n",
+      "* [PyQuante](http://pyquante.sf.net) Python Quantum Chemistry\n",
+      "* [QuTiP](https://code.google.com/p/qutip/) Quantum Toolbox in Python\n",
+      "* Konrad Hinsen's [Scientific Python](http://dirac.cnrs-orleans.fr/plone/software/scientificpython/) and [MMTK](http://dirac.cnrs-orleans.fr/MMTK/)\n",
+      "* [Atomic Simulation Environment](https://wiki.fysik.dtu.dk/ase/)\n",
+      "\n",
+      "\n",
+      "## Cool Stuff\n",
+      "* [Moin Moin](http://moinmo.in/), a wiki written in Python\n",
+      "* [Python Challenge](http://www.pythonchallenge.com/), programming puzzles of increasing difficulty that are a great way to improve your Python skills\n",
+      "* [Project Euler](http://projecteuler.net/), programming problems that would (?) have interested Euler. Python is one of the most commonly used languages there.\n"
+     ]
     }
    ],
    "metadata": {}
