Workshop 2 and exercises modifications

--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -584,7 +584,7 @@
      "source": [
       "The above two while loops are not really good examples because we can easily use a for-loop to achieve the same thing. In general if you know you want to loop a specific number of times then you use a for-loop, if you know you need to loop until some condition is fulfilled then you use a while loop. \n",
       "\n",
-      "For instance if you had some data in a very big heterogenous list and you wanted the elements from the start of the list up until the first zero then a would be to use a while loop:\n",
+      "For instance if you had some data in a very big heterogenous list and you wanted the elements from the start of the list up until the first zero then one way would be to use a while loop:\n",
       "\n",
       "    my_data = []\n",
       "    i=0\n",
@@ -840,7 +840,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Open up test_structure2.xyz in an editor and check it matches the above text."
+      "Open up test_structure2.xyz in an editor (e.g. wordpad) and check it matches the above text."
      ]
     },
     {
@@ -1193,7 +1193,7 @@
      "source": [
       "You can pass in a second argument to **array** that gives the numeric type. There are a number of types [listed here](http://docs.scipy.org/doc/numpy/user/basics.types.html) that your matrix can be. Some of these are referenced using a single character. The most common ones are 'd' (double precision floating point number), 'D' (double precision complex number), and 'i' (int32). Thus,\n",
       "\n",
-      "    np.array([1, 2, 3, 4, 5, 6], 'd')"
+      "    np.array([1, 2, 3, 4, 5, 6],'d')"
      ]
     },
     {
@@ -1208,7 +1208,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    np.array([1, 2, 3, 4, 5, 6], 'D')"
+      "    np.array([1, 2, 3, 4, 5, 6],'D')"
      ]
     },
     {
@@ -1257,7 +1257,7 @@
      "source": [
       "You can also form empty (zero) matrices of arbitrary shape (including vectors, which Numpy treats as vectors with one row), using the **zeros** command:\n",
       "\n",
-      "    np.zeros( [3,3], 'd')"
+      "    np.zeros( [3,3])"
      ]
     },
     {
@@ -1279,7 +1279,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    np.zeros(3, 'd')"
+      "    np.zeros(3)"
      ]
     },
     {
@@ -1294,7 +1294,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    np.zeros( [1,3], 'd')"
+      "    np.zeros( [1,3])"
      ]
     },
     {
@@ -1311,7 +1311,7 @@
      "source": [
       "or column vectors:\n",
       "\n",
-      "    np.zeros( [3,1], 'd')"
+      "    np.zeros( [3,1])"
      ]
     },
     {
@@ -1328,7 +1328,7 @@
      "source": [
       "There's also an **identity** command that behaves as you'd expect:\n",
       "\n",
-      "    np.identity(4, 'd')"
+      "    np.identity(4)"
      ]
     },
     {
@@ -1433,7 +1433,7 @@
       "## Matrix operations\n",
       "Matrix objects act sensibly when multiplied by scalars:\n",
       "\n",
-      "    0.125*np.identity(3, 'd')"
+      "    0.125*np.identity(3)"
      ]
     },
     {
@@ -1450,7 +1450,7 @@
      "source": [
       "as well as when you add two matrices together. (However, the matrices have to be the same shape.)\n",
       "\n",
-      "    np.identity(2, 'd') + np.array([[1, 1],[1, 2]])"
+      "    np.identity(2) + np.array([[1, 1],[1, 2]], 'd')"
      ]
     },
     {
@@ -1526,7 +1526,7 @@
      "source": [
       "There are **determinant**, **inverse**, and **transpose** functions that act as you would suppose. Transpose can be abbreviated with \".T\" at the end of a matrix object:\n",
       "\n",
-      "    m = np.array([[1, 2], [3, 4]])\n",
+      "    m = np.array([[1, 2], [3, 4]], 'd')\n",
       "    m.T"
      ]
     },
@@ -1595,7 +1595,7 @@
       "    \n",
       "Code:\n",
       "\n",
-      "    A = np.array([[13,-4], [-4,7]], 'd')\n",
+      "    A = np.array([[13,-4], [-4,7]])\n",
       "    np.linalg.eigvalsh(A)"
      ]
     },
@@ -1627,7 +1627,7 @@
      "metadata": {},
      "source": [
       "## Example: Finite Differences\n",
-      "Now that we have these tools in our toolbox, we can start to do some cool stuff with it. Many of the equations we want to solve in physics and chemistry involve differential equations. We want to be able to compute the derivative of functions:\n",
+      "Now that we have some tools in our toolbox, we can start to do some cool stuff with it. Many of the equations we want to solve in physics and chemistry involve differential equations. We want to be able to compute the derivative of functions:\n",
       "\n",
       "$$ y' = \\frac{y(x+h)-y(x)}{h} $$\n",
       "\n",
@@ -1690,7 +1690,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Pretty close!"
+      "Pretty close! \n",
+      "\n",
+      "NB make sure you grasp what the above code is doing, if you don't grab a demonstrator and ask them!"
      ]
     },
     {
