--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -41,7 +41,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "To speed things up we will also include some filled code cells for you to execute **(You should still read what's in the code cells and make sure you understand them!!)**: "
+      "To speed things up we will also include some filled code cells for you to execute **(You should still read what's in the code cells and make sure you understand them!!)**. Here we are going to set some variables we will use later on and also turn on the notebooks plotting features."
      ]
     },
     {
@@ -56,18 +56,28 @@
       "big_data = [27, 1, 58, 50, 63, 48, 42, 81, 77, 39, 46, 44, 36, 5, 63, 25, 56, 43, 8, \\\n",
       "            70, 0, 1, 0, 0 ,0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, \\\n",
       "            1, 0 ,0 ,1, 0 ,0, 'H', 'H', 'N', 'H', 'C', 'C', 'H', 'H', 'H', 'N', 'N', \\\n",
-      "            'C', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'H']"
+      "            'C', 'H', 'H', 'H', 'C', 'C', 'C', 'C', 'H']\n",
+      "%pylab inline"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
      "level": 1,
      "metadata": {},
      "source": [
-      "Refreshers (with a little bit extra)"
+      "Refreshers with a bit extra"
      ]
     },
     {
@@ -718,6 +728,24 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "And that many variables special functions built into them called methods, e.g. strings have a .lower() method:\n",
+      "\n",
+      "    s=\"OMG TURN OFF CAPS-LOCK\"\n",
+      "    s.lower()"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {},
@@ -1238,7 +1266,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "To build matrices, you can either use the array command with lists of lists:\n",
+      "To build matrices, you can use the array command with lists of lists:\n",
       "    \n",
       "        np.array([[0, 1], [1, 0]], 'd')"
      ]
