--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -180,7 +180,7 @@
       "6.3: clean_line(line_string)\n",
       "---------------------------\n",
       "\n",
-      "Given a string *line_string* return a string with the first and last word of the line\n",
+      "Given a string *line_string* return a string with the first and last word (where word is just a set of symbols with no spaces) of the line ommited\n",
       "<span style=\"text-decoration:underline\" title=\"- If you had a list of the word strings how could you make a new list containing only the second through to the second to last word? \">Hints</span>"
      ]
     },
@@ -209,7 +209,7 @@
       "6.4: word_extractor(line_string, indices)\n",
       "-----------------------------------------\n",
       "\n",
-      "Given a string line_string and list of integers indices, return a string containing the words specified by indices \n",
+      "Given a string *line_string* and list of integers *indices*, return a string containing the words specified by indices \n",
       "\n",
       "\n",
       "<span style=\"text-decoration:underline\" title=\"Use the previous exercises as a guide\">Hints</span>"
@@ -375,61 +375,27 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "8.1: square_arrays(list_ints)\n",
-      "---------------\n",
-      "\n",
-      "Given a string phrase, return the total number of \"f\"s and \"F\"s in the phrase.\n",
-      "\n",
-      "<span style=\"text-decoration:underline\" title=\"- You can loop over the letters in a string with a for loop just like you can with lists.\n",
-      "- Review your understanding of the 'or' and 'and' keywords used to test more than one condition in an 'if' statement.\n",
-      "- Use a counter to keep track of how many 'f's you've found. Set it to 0 before you start your for loop.\">Hints</span>"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def count_fs(phrase):\n",
-      "    '''\n",
-      "    >>> count_fs('Finished files are the result of years of scientific study combined with the experience of years.')\n",
-      "    6\n",
-      "    >>> count_fs('Four score and seven years ago')\n",
-      "    1\n",
-      "    >>> count_fs('A man, a plan, a canal - Panama!')\n",
-      "    0\n",
-      "    '''"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "starts_or_ends_with_z(my_string)\n",
+      "8.1: chars_before_comma(line_string)\n",
       "---------------------------\n",
       "\n",
-      "Given a string my_string, return the boolean True if my_string starts or ends with 'z' or 'Z', and False if it doesn't.\n",
+      "Given a string containing a line of text return the number of characters before the first comma in the string\n",
       "\n",
-      "<span style=\"text-decoration:underline\" title=\"- How do you get the first element of a string or list? How do you get the last element?\n",
-      "- You can use keywords 'and' and 'or' in an 'if' statement to test multiple conditions.\n",
-      "- Make sure you are returning a boolean (True or False) and not a string ('True' or 'False') \">Hints</span>"
+      "<span style=\"text-decoration:underline\" title=\"There are a couple of ways to tackle this one:\n",
+      "- You could loop through the string and count all the characters then return the counter at the appropriate point\n",
+      "- You could try and find some way of combining the .split() method and the len() function\">Hints</span>"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def starts_or_ends_with_z(my_string):\n",
+      "def chars_before_comma(line_string):\n",
       "    '''\n",
-      "    >>> starts_or_ends_with_z('pizzazz')\n",
-      "    True\n",
-      "    >>> starts_or_ends_with_z('python')\n",
-      "    False\n",
-      "    >>> starts_or_ends_with_z('zap')\n",
-      "    True\n",
-      "    '''\n"
+      "    >>> chars_before_comma('This a particularly dull sentence, why did they put it in this notebook?')\n",
+      "    33\n",
+      "    >>> chars_before_comma('To be, or not to be, that is the question\u2014\\nWhether 'tis Nobler in the mind to suffer\\nThe Slings and Arrows of outrageous Fortune,\\nOr to take Arms against a Sea of troubles,\\nAnd by opposing end them?')\n",
+      "    5\n",
+      "   '''"
      ],
      "language": "python",
      "metadata": {},
@@ -439,27 +405,50 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "sum_of_all_strings(string_list)\n",
-      "---------------------------\n",
+      "8.2: null_vector(vec_length)\n",
+      "============================\n",
       "\n",
-      "Given a list string_list that contains several strings, return the total of the lengths of all of the strings.\n",
+      "Given an integer *vec_length* return a numpy array of zeros of length vec_length\n",
       "\n",
-      "<span style=\"text-decoration:underline\" title=\"- Use a variable to track the total length. Set it equal to 0 and add to it every time you loop through string_list.\n",
-      "- Use the 'len()' function to get the length of a string.\">Hints</span>"
+      "<span style=\"text-decoration:underline\" title=\"One of the functions inside numpy does what we want\">Hints</span>"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def sum_of_all_strings(string_list):\n",
+      "def null_vector(vec_length):\n",
       "    '''\n",
-      "    >>> sum_of_all_strings(['Eleanor', 'Rigby'])\n",
-      "    12\n",
-      "    >>> sum_of_all_strings(['Eight', 'Days', 'a', 'Week'])\n",
-      "    14\n",
-      "    >>> sum_of_all_strings(['Strawberry', 'Fields', 'Forever'])\n",
-      "    23\n",
+      "    >>> null_vector(1)\n",
+      "    array([ 0.])\n",
+      "    >>> null_vector(2)\n",
+      "    array([ 0.,  0.])\n",
+      "    >>> null_vector(4)\n",
+      "    array([ 0.,  0., 0., 0.])\n",
+      "   '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "8.3: checkboard()\n",
+      "==============\n",
+      "\n",
+      "Create a 4x4 numpy matrix with a checkboard pattern of alternating ones and zeros"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def checkboard():\n",
+      "    '''\n",
+      "    >>> null_vector(1)\n",
+      "    array([ 0.])\n",
       "    '''"
      ],
      "language": "python",
@@ -467,177 +456,17 @@
      "outputs": []
     },
     {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "stretch_string(my_string, stretch_number)\n",
-      "---------------------------------------\n",
-      "\n",
-      "Given a string my_string and an integer stretch_number, return a string in which each character of the original string is repeated stretch_number times.\n",
-      " \n",
-      "<span style=\"text-decoration:underline\" title=\"- You can loop over the letters in a string with a for loop just like you can with lists.\n",
-      "- Start with an empty string. Add to the end of the string with '+' as you loop through the letters in my_string.\n",
-      "- Try this at a Python prompt: print('p'*4)\">Hints</span>"
-     ]
-    },
-    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def stretch_string(my_string, stretch_number):\n",
-      "    '''\n",
-      "    >>> stretch_string('banana', 2)\n",
-      "    'bbaannaannaa'\n",
-      "    >>> stretch_string('apple', 3)\n",
-      "    'aaappppppllleee'\n",
-      "    >>> stretch_string('fig', 4)\n",
-      "    'ffffiiiigggg'\n",
-      "    '''"
+      "8.4: solve(a,b)\n",
+      "==============\n",
+      "\n",
+      "Given two linear equations defined by parameters use numpy to solve the equations."
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "squares_list(number_list)\n",
-      "-----------------------\n",
-      "\n",
-      "Given a list of numbers number_list, return a list containing the squares of each of the numbers in number_list in the order in which they appeared in number_list.\n",
-      " \n",
-      "<span style=\"text-decoration:underline\" title=\"Start with an empty list. For every number in number_list, use the 'append()' function to add a new element to the end of the new list\">Hints</span>"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def squares_list(number_list):\n",
-      "    '''\n",
-      "    >>> squares_list([1, 2, 3])\n",
-      "    [1, 4, 9]\n",
-      "    >>> squares_list([4, 0])\n",
-      "    [16, 0]\n",
-      "    >>> squares_list([12, 9, 6, 3])\n",
-      "    [144, 81, 36, 9]\n",
-      "    '''"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "remove_vowels(my_string)\n",
-      "----------------------\n",
-      "\n",
-      "Given a lower-case string my_string, return that string with all of the vowels removed.\n",
-      "\n",
-      " \n",
-      "<span style=\"text-decoration:underline\" title=\"- Start with an empty string. Add the letters from my_string to this new string only if they aren't vowels.\n",
-      "- You can loop over a string just like you can loop over a list.\">Hints</span>"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def remove_vowels(my_string):\n",
-      "    '''\n",
-      "    >>> remove_vowels('bookkeeper')\n",
-      "    'bkkpr'\n",
-      "    >>> remove_vowels('almanac')\n",
-      "    'lmnc'\n",
-      "    >>> remove_vowels('syzygy')\n",
-      "    'syzygy'\n",
-      "    '''"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "remove__words_with_vowels(string_list)\n",
-      "---------------------------------\n",
-      "\n",
-      "Given a list of lower-case strings wordList, return that list with all the words that contain vowels removed.\n",
-      "\n",
-      "<span style=\"text-decoration:underline\" title=\"- Start with an empty list. Add the words from wordList to this new list only if they don't contain vowels\n",
-      "- Try writing a second function called containsVowels whose job is to check if a word has any vowels. Use this function in a for loop in remove__words_with_vowels. Here's the start of containsVowels...\n",
-      "    def containsVowels(word):\n",
-      "        for letter in word:\n",
-      "            &lt;add your code here&gt;           \n",
-      "- Use the <code>append()</code> function to add elements to the end of a list.\">Hints</span>"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def remove__words_with_vowels(string_list):\n",
-      "    '''\n",
-      "    >>> remove__words_with_vowels(['hymn', 'myth', 'myrrh', 'nymph'])\n",
-      "    ['hymn', 'myth', 'myrrh', 'nymph']\n",
-      "    >>> remove__words_with_vowels(['who', 'what', 'when', 'where', 'why'])\n",
-      "    ['why']\n",
-      "    >>> remove__words_with_vowels(['coy', 'sly', 'shy', 'bashful'])\n",
-      "    ['sly', 'shy']\n",
-      "    '''"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "spelling_bee(correct, guess)\n",
-      "---------------------------\n",
-      "\n",
-      "Given the correct spelling of a word, correct, and the contestant's guessed spelling, guess, return the string \"correct\" if the guess is spelled exactly correctly, \"almost\" if there are at most two mistakes in the spelling, and \"wrong\" if three or more letters are different. You can assume that all guesses are the correct length.\n",
-      "\n",
-      "\n",
-      "<span style=\"text-decoration:underline\" title=\"Use a counter to keep track of the number of spelling errors.\n",
-      "- We need to compare correct and guess letter by letter. Use the '[0]' syntax to index into a string - for example:\n",
-      "    if correct[0] != guess[0]\n",
-      "- Review your notes on the len() function, which returns the length of a string.\n",
-      "- Review your notes on the range() function, which returns a list of indices that you can loop over. Experiment with what happens when you try this at a Python prompt:\n",
-      "    for letter in range(len('hello')):\n",
-      "        print letter\">Hints</span>"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def spelling_bee(correct, guess):\n",
-      "    '''\n",
-      "    >>> spelling_bee('hello', 'hello')\n",
-      "    'correct'\n",
-      "    >>> spelling_bee('python', 'pithon')\n",
-      "    'almost'\n",
-      "    >>> spelling_bee('echolocation', 'eckolocashun')\n",
-      "    'wrong'\n",
-      "    '''"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "*That's all!*  If you've made it this far, you're doing brilliantly!  (Even if you finished up after the workshop.)  "
-     ]
     }
    ],
    "metadata": {}
