--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -34,7 +34,7 @@
       "\n",
       "No copying and pasting! You'll learn the concepts better if you type them out yourself.\n",
       "\n",
-      "Warning please periodically save your work."
+      "**Warning please periodically save your work.**"
      ]
     },
     {
@@ -70,7 +70,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -94,17 +94,6 @@
      "source": [
       "Strings are variables that contain combinations of characters. We define with single or double quotes, or if we want a 'raw' string that captures multiple lines and characters python usually interprets we use triple quotes."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "my_str = 'here is a string'\n",
-      "print(my_str)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "code",
@@ -904,7 +893,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now have a look at test_structure.xyz again."
+      "Now have a look at test_structure2.xyz again."
      ]
     },
     {
@@ -1100,7 +1089,7 @@
       "With that out the way, we can now introduce some of Python's most popular scientific libraries: [Matplotlib](http://matplotlib.org/), [Numpy](http://www.numpy.org/) and [scipy](http://www.scipy.org/)\n",
       "\n",
       "## Plotting with Matplotlib\n",
-      "Plotting is so common that the IPython notebook can be launched with plotting specifically enabled, that's what we were doing by including the extra '--pylab inline' commands while launching the notebook. Those extra commands invisibly added\n",
+      "Plotting is so common that the IPython notebook can be launched with plotting specifically enabled, that's what we were doing by including the extra '--pylab=inline' commands while launching the notebook. Those extra commands invisibly added\n",
       "\n",
       "    from pylab import *\n",
       "    \n",
@@ -1677,7 +1666,7 @@
       "    \n",
       "    # Use centered differences for the interior points, one-sided differences for the ends\n",
       "    for i in range(1,n-1):\n",
-      "        d[i] = (y[i+1]-y[i])/(x[i+1]-x[i])\n",
+      "        d[i] = (y[i+1]-y[i-1])/(x[i+1]-x[i-1])\n",
       "        \n",
       "    d[0] = (y[1]-y[0])/(x[1]-x[0])\n",
       "    d[n-1] = (y[n-1]-y[n-2])/(x[n-1]-x[n-2])\n",
